# benchradar

./: .gitignore  README.md  eslint.config.mjs  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vite.config.ts  vitest.config.mts  vitest.setup.ts
.github/workflows/: ci-pages.yml  ci.yml  e2e-tests.yml  integration-tests.yml  supabase-keep-alive.yml
.venv-uv/: pyvenv.cfg
ai-detector/: README.md
ai-moderator/: README.md  pyproject.toml  requirements.txt
ai-moderator/ai_moderator/: __main__.py  cli.py  detector.py
ai-moderator/benchradar_ai_moderator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
docs/: ai-moderator.md
e2e/: map-markers.e2e.spec.ts
public/: manifest.webmanifest
scripts/: backup-supabase.sh  export-local-supabase-env.mjs  generate-icons.mjs  migrate-bench-photos-to-webp.mjs  regenerate-thumbnails.mjs  run-e2e-tests.sh  run-integration-tests.sh
src/: App.tsx  index.css  main.tsx
src/hooks/: useAdminTabs.ts  useAdminTabs.unit.test.ts  useAuth.ts  useAuth.unit.test.ts  useBenchEditorController.ts  useFullImagePreview.ts  useFullImagePreview.unit.test.ts  useMapAuth.ts  useMapAuth.unit.test.ts
src/lib/: benchDetectorClient.ts  geo.ts  geo.unit.test.ts  imageProcessing.ts  imageProcessing.unit.test.ts  photoMetadata.ts  photoMetadata.unit.test.ts  supabaseClient.ts
src/repositories/: authRepository.ts  benchRepository.ts  benchRepository.unit.test.ts  fetchBenchesWithPhotos.ts  (+1 more)
src/routes/: MapPage.tsx  (+6 more)
supabase/: config.toml  schema.sql
tests/: integration-map-markers.spec.ts
(+29 files in other folders)
